--- a/.ssh/config
+++ b/.ssh/config
@@ -12,3 +12,7 @@ Host github.com
   PreferredAuthentications publickey
   IdentityFile ~/.ssh/id_ed25519_personal
   AddKeysToAgent yes
+Host aur.archlinux.org
+  HostName aur.archlinux.org
+  User aur
+  IdentityFile ~/.ssh/aur
