--- a/.config/wofi/config
+++ b/.config/wofi/config
@@ -1,14 +1,11 @@
-term=alacritty
+term=kitty
 location=top
 yoffset=180
-width=16%
-lines=11
+width=18%
+lines=15
 
-prompt=
-show=drun
 insensitive=true
 allow_images=true
-hide_scroll=true
 
-aways_parse_args=true
+always_parse_args=true
 show_all=true
