latest, migrated to nvim

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -18,10 +18,10 @@
 #: families that have many weight variants like Book, Medium, Thick,
 #: etc. For example::
 
-     font_family      Space Mono for Powerline
-     bold_font        Space Mono for Powerline, Bold
-     italic_font      Space Mono for Powerline, Regular Italic
-     bold_italic_font Space Mono for Powerline, Bold Italic
+     font_family      NotoSansMono Nerd Font
+     bold_font        NotoSansMono Nerd Font, Bold
+     italic_font      NotoSansMono Nerd Font, Extralight
+     bold_italic_font NotoSansMono Nerd Font, Extrabold
 
      font_size 13.0
 
@@ -78,7 +78,7 @@
 
 #:     symbol_map codepoints Font Family Name
 
-# disable_ligatures never
+disable_ligatures never
 
 #: Choose how you want to handle multi-character ligatures. The
 #: default is to always render them.  You can tell kitty to not render
