wezterm cfg added, change .zshrc to fix kitty specific stuff

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -18,10 +18,10 @@
 #: families that have many weight variants like Book, Medium, Thick,
 #: etc. For example::
 
-     font_family      NotoSansMono Nerd Font
-     bold_font        NotoSansMono Nerd Font, Bold
-     italic_font      NotoSansMono Nerd Font, Extralight
-     bold_italic_font NotoSansMono Nerd Font, Extrabold
+     font_family      Iosevka Term
+     bold_font        Iosevka Term, Bold
+     italic_font      Iosevka Term, Italic
+     bold_italic_font Iosevka Term, Bold Italic
 
      font_size 13.0
 
